--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="./images/favicon.ico" />
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Dub-AB | A Developer
   </title>
 
-  <meta name="description" content="Add small description of yourslef.">
+  <meta name="description" content="An old reired guy trying to learn programming.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
-  <meta name="keywords" content="Put your name, skills and some coding keywords" />
+  <meta name="keywords" content="Anthony B. Washington, sql, JavaScript, python" />
   <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -56,10 +56,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Anthony B. Washington</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>A Developer based in Menifee, California.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -80,7 +80,7 @@
             <div class="work__text">
               <h3>Portfolio Template</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                This Portfolio.  Who's template was modified from <a href="http://https://github.com/nisarhassan12/portfolio-template"> Nisar</a>.
               </p>
               <ul class="work__list">
                 <li>HTML</li>
@@ -90,11 +90,11 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
+                <a href="https://dub-ab.github.io/myFolio/index.html" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                  <img src="./images/portfolio_template.png" class="work__code" alt="GitHub">
                 </a>
               </div>
             </div>
@@ -169,12 +169,8 @@
         <h2>Clients</h2>
         <div class="client__logos">
           <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
+          <img src="./images/The_bathistry.jpg" class="client__logo" alt="The Bathistry" />
+          <img src="./images/TheBigBlueUmbrella.jpeg" class="client__logo" alt="The Big Blue Umbrella" />
         </div>
       </div>
     </section>
@@ -199,7 +195,7 @@
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo" src="./images/ABW.jpg" alt="" />
           </div>
         </div>
       </div>
