portfolio based upon work by Nisar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <meta name="description" content="An old reired guy trying to learn programming.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
-  <meta name="keywords" content="Anthony B. Washington, sql, JavaScript, python" />
+  <meta name="keywords" content="Anthony B. Washington, sql, JavaScript, python, 3d modeling, " />
   <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -59,7 +59,7 @@
           <span>Anthony B. Washington</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Developer based in Menifee, California.</p>
+        <p>A Developer<br>Menifee, California</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -75,6 +75,33 @@
         <div class="work__boxes">
 
           <!-- Each div with the work__box class is a project. -->
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>3D Modeling</h3>
+              <p>
+                I like to dabble around with my 3D printer.  Take a look at some of my models that have been used throughout the world!
+              </p>
+              <ul class="work__list">
+                <li>OpenSCAD</li>
+                <li>FreeCAD</li>
+                <li>Slicer Software</li>     
+                <li>OctoPrint</li>          
+              </ul>
+
+              <div class="work__links">
+                <a href="https://www.printables.com/@QuasiReal_13550" target="_blank" class="link__text">
+                  View My Models <span>&rarr;</span>
+                </a>
+                <a href="https://www.printables.com/" title="Visit Site" target="_blank">
+                  <img src="./images/prusa_icon_32_x_32.png" class="work__code" alt="Printables">
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box">
+              <img src="./images/3d_print.png" ></img:src>
+            </div>
+          </div>
 
           <div class="work__box">
             <div class="work__text">
@@ -98,8 +125,8 @@
                 </a>
               </div>
             </div>
-            <div class="work__image-box" style="">
-              <img src="./images/Screenshot_22-8-2024_124127_127.0.0.1.jpeg" class="work__image" alt="Project 1" />
+            <div class="work__image-box">
+              <img src="./images/project_template.jpeg" class="work__image" alt="Project 1" />
             </div>
           </div>
 
@@ -220,7 +247,7 @@
       <p>
         &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
       </p>
-
+      <a href="https://www.freepik.com/free-photo/black-prism-concept-ai-generated_133558240.htm#query=dark%20background&position=16&from_view=keyword&track=ais_hybrid&uuid=1d1d7ad8-b46a-4d42-981a-cd7a8681529c">Image by vwalakte</a> on Freepik
     </div>
   </footer>
 
