update link to myFolio

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://github.com/dub-ab/myFolio" target="_blank" class="link__text">
+                <a href="https://dub-ab.github.io/myFolio/" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/dub-ab/myFolio" title="View Source Code" target="_blank">
