--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <a href="https://dub-ab.github.io/myFolio/" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/dub-ab/myFolio" title="View Source Code" target="_blank">
+                <a href="#top" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
