now it should be right.

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://dub-ab.github.io/myFolio/" target="_blank" class="link__text">
+                <a href="#top"  target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#top" title="View Source Code" target="_blank">
+                <a href="https://github.com/dub-ab/myFolio" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
