add new background image and tweeks

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="work__text">
               <h3>3D Modeling</h3>
               <p>
-                I like to dabble around with my 3D printer.  Take a look at some of my models that have been used throughout the world!
+                I like to dabble around with my 3D printer.  Take a look at a few of the models I've created. Some of my models have been used throughout the world!
               </p>
               <ul class="work__list">
                 <li>OpenSCAD</li>
@@ -93,7 +93,7 @@
                 <a href="https://www.printables.com/@QuasiReal_13550" target="_blank" class="link__text">
                   View My Models <span>&rarr;</span>
                 </a>
-                <a href="https://www.printables.com/" title="Visit Site" target="_blank">
+                <a href="https://www.printables.com/" title="Visit Printables.com" target="_blank">
                   <img src="./images/prusa_icon_32_x_32.png" class="work__code" alt="Printables">
                 </a>
               </div>
@@ -117,7 +117,7 @@
               </ul>
 
               <div class="work__links">
-                <a href="#top"  target="_blank" class="link__text">
+                <a href="#top"  class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/dub-ab/myFolio" title="View Source Code" target="_blank">
@@ -135,14 +135,15 @@
               <h3>My SunPower Solar Monitor</h3>
               <p>
                 My rendention of a SunPower solar panel monitoring system.  
-              </p><p>            This rendention will email recipients when the set of inverters reporting is not equivalent to the known set of inverters.
               </p>
               <ul class="work__list">
-                <li>Python</li>               
+                <li>Python</li>        
+                <li>InfluxDB</li>
+                <li>Grafana</li>
               </ul>
 
               <div class="work__links">
-                <a href="" target="_blank" class="link__text">
+                <a href="#top" class="link__text">
                   broken link <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/dub-ab/SunPower" title="View Source Code" target="_blank">
@@ -247,7 +248,7 @@
       <p>
         &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
       </p>
-      <a href="https://www.freepik.com/free-photo/black-prism-concept-ai-generated_133558240.htm#query=dark%20background&position=16&from_view=keyword&track=ais_hybrid&uuid=1d1d7ad8-b46a-4d42-981a-cd7a8681529c">Image by vwalakte</a> on Freepik
+      <a href="https://www.freepik.com/free-photo/black-prism-concept-ai-generated_133558240.htm#query=dark%20background&position=16&from_view=keyword&track=ais_hybrid&uuid=1d1d7ad8-b46a-4d42-981a-cd7a8681529c" class="link">Image by vwalakte</a> on Freepik
     </div>
   </footer>
 
