--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     Dub-AB | A Developer
   </title>
 
-  <meta name="description" content="An old reired guy trying to learn programming.">
+  <meta name="description" content="An experienced database administrator. A 3d maker from CAD design to slicing and additively manfacturing products. A place to host a portfolio of my work and skills.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
   <meta name="keywords" content="Anthony B. Washington, sql, JavaScript, python, 3d modeling, " />
   <link rel="stylesheet" href="index.css" />
